force-app/main/default/objects/Vehicle__c/fields/Fuel_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Efficiency__c</fullName>
    <label>Fuel Efficiency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>