force-app/main/default/objects/Vehicle__c/fields/Maintenance_History__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_History__c</fullName>
    <label>Maintenance History</label>
    <type>TextArea</type>
</CustomField>